--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,10 @@ body {
 .heartIcon {
     border-radius: 0px 25.5px 0px 20.5px;
 }
+
+.active {
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    font-weight: 600;
+    color: #39D49A;
+}
